FIX: fixed alignment of bank name on card

--- a/frontend/src/styles/DashboardPage.module.css
+++ b/frontend/src/styles/DashboardPage.module.css
@@ -164,6 +164,10 @@
     margin: 5px 0;
 }
 
+.bank{
+    text-align: left;
+}
+
 
 .number {
     font-size: 22px;
